--- a/rt-n14u.config
+++ b/rt-n14u.config
@@ -130,7 +130,7 @@ CONFIG_FIRMWARE_INCLUDE_LPRD=y
 CONFIG_FIRMWARE_INCLUDE_U2EC=y
 
 ### Include USB-over-IP daemon. ~0.05MB
-#CONFIG_FIRMWARE_INCLUDE_USBIP=y
+CONFIG_FIRMWARE_INCLUDE_USBIP=y
 
 ### Include "tcpdump" utility. ~0.6MB
 CONFIG_FIRMWARE_INCLUDE_TCPDUMP=y
@@ -194,7 +194,7 @@ CONFIG_FIRMWARE_INCLUDE_OPENVPN=y
 #CONFIG_FIRMWARE_INCLUDE_SSWAN=y
 
 ### Include Wireguard VPN module and utilite
-#CONFIG_FIRMWARE_INCLUDE_WIREGUARD=y
+CONFIG_FIRMWARE_INCLUDE_WIREGUARD=y
 
 ### Include AmneziaWG kernel module
 CONFIG_FIRMWARE_INCLUDE_AMNEZIAWG=y
@@ -233,7 +233,7 @@ CONFIG_FIRMWARE_INCLUDE_TOR_GEOIP=y
 #CONFIG_FIRMWARE_INCLUDE_TOR_GEOIPV6=y
 
 ### Include OBFS4 for TOR ~6.1MB
-#CONFIG_FIRMWARE_INCLUDE_OBFS4=y
+CONFIG_FIRMWARE_INCLUDE_OBFS4=y
 
 ### Include Privoxy proxy ~0.3MB
 CONFIG_FIRMWARE_INCLUDE_PRIVOXY=y
