--- a/rt-n14u.config
+++ b/rt-n14u.config
@@ -84,13 +84,13 @@ CONFIG_FIRMWARE_INCLUDE_SERIAL=y
 CONFIG_FIRMWARE_INCLUDE_IPSET=y
 
 ### Include NFSv3 server. ~0.6MB
-CONFIG_FIRMWARE_INCLUDE_NFSD=y
+#CONFIG_FIRMWARE_INCLUDE_NFSD=y
 
 ### Include NFSv3 client. ~0.5MB
-CONFIG_FIRMWARE_INCLUDE_NFSC=y
+#CONFIG_FIRMWARE_INCLUDE_NFSC=y
 
 ### Include CIFS (SMB) client. ~0.2MB
-CONFIG_FIRMWARE_INCLUDE_CIFS=y
+#CONFIG_FIRMWARE_INCLUDE_CIFS=y
 
 ### Include Shortcut Forward Engine
 CONFIG_FIRMWARE_INCLUDE_SHORTCUT_FE=y
@@ -133,7 +133,7 @@ CONFIG_FIRMWARE_INCLUDE_U2EC=y
 CONFIG_FIRMWARE_INCLUDE_USBIP=y
 
 ### Include "tcpdump" utility. ~0.6MB
-CONFIG_FIRMWARE_INCLUDE_TCPDUMP=y
+#CONFIG_FIRMWARE_INCLUDE_TCPDUMP=y
 
 ### Include "socat" utility ~0.3MB
 #CONFIG_FIRMWARE_INCLUDE_SOCAT=y
@@ -164,7 +164,7 @@ CONFIG_FIRMWARE_INCLUDE_FTPD=y
 CONFIG_FIRMWARE_INCLUDE_FTPD_SSL=y
 
 ### Include alternative L2TP control client RP-L2TP. ~0.1MB
-CONFIG_FIRMWARE_INCLUDE_RPL2TP=y
+#CONFIG_FIRMWARE_INCLUDE_RPL2TP=y
 
 ### Include EAP-TTLS and EAP-PEAP authentication support. openssl ~1.2MB, wpa_supplicant +0.04MB
 CONFIG_FIRMWARE_INCLUDE_EAP_PEAP=y
@@ -188,7 +188,7 @@ CONFIG_FIRMWARE_INCLUDE_DROPBEAR_FAST_CODE=y
 CONFIG_FIRMWARE_INCLUDE_OPENSSH=y
 
 ### Include OpenVPN. IPv6 required. openssl ~1.2MB, openvpn ~0.4MB
-CONFIG_FIRMWARE_INCLUDE_OPENVPN=y
+#CONFIG_FIRMWARE_INCLUDE_OPENVPN=y
 
 ### Include StrongSwan. XFRM modules ~0.2MB, strongswan ~0.7MB
 #CONFIG_FIRMWARE_INCLUDE_SSWAN=y
@@ -212,7 +212,7 @@ CONFIG_FIRMWARE_INCLUDE_XUPNPD=y
 CONFIG_FIRMWARE_INCLUDE_MINIDLNA=y
 
 ### Include Transmission torrent. openssl ~1.2MB, transmission ~1.5MB
-CONFIG_FIRMWARE_INCLUDE_TRANSMISSION=y
+#CONFIG_FIRMWARE_INCLUDE_TRANSMISSION=y
 
 ### Include Transmission-Web-Control (advanced WebUI). ~0.8MB
 CONFIG_FIRMWARE_INCLUDE_TRANSMISSION_WEB_CONTROL=y
